--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,12 @@
     @apply dark:bg-gray-800 dark:text-gray-100;
   }
 }
+
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
