--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply dark:bg-[#38383c] dark:text-gray-100;
+    @apply dark:bg-[#38383c] dark:text-gray-100 overflow-x-hidden;
   }
 
   .h2 {
@@ -18,13 +18,48 @@
   strong {
     @apply font-[600] text-[#e0e0e0];
   }
+
+  #monitorTheme {
+    @apply fill-white dark:fill-[#4e6576];
+  }
 }
 
-html {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+body {
+  width: 100%;
+  overflow-x: hidden;
 }
 
-html::-webkit-scrollbar {
-  display: none;
+#frame1 {
+  animation: frame1 1s infinite;
+}
+@keyframes frame1 {
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+#frame2 {
+  animation: frame2 1s infinite;
+}
+@keyframes frame2 {
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  51% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
