--- a/components/ui/sliders/ProjectsSlider.module.css
+++ b/components/ui/sliders/ProjectsSlider.module.css
@@ -1,8 +1,8 @@
 .container {
   width: 100%;
   height: 100%;
-  max-width: 600px;
-  max-height: 600px;
+  /* max-width: 600px;
+  max-height: 600px; */
   display: flex;
   transform-style: preserve-3d;
   justify-content: center;
@@ -16,8 +16,9 @@
 
 .cards {
   position: relative;
-  height: 500px;
-  width: 430px;
+  /* height: 610px; */
+  height: clamp(610px, 100vw, 700px);
+  /* width: 430px; */
   margin-bottom: 20px;
   perspective: 1000px;
   transform-style: preserve-3d;
@@ -26,7 +27,6 @@
 .cards label {
   position: absolute;
   color: white;
-  width: clamp(400px, 50vw, 500px);
   left: 0;
   right: 0;
   margin: auto;
@@ -37,18 +37,17 @@
 .cards .card {
   position: relative;
   height: 100%;
-  border-radius: 10px;
-  padding: 30px 35px;
+  border-radius: 15px;
 }
 
 .card1 {
-  background-color: black;
+  background-color: #252525;
 }
 .card2 {
-  background-color: yellow;
+  background-color: #ffe62d;
 }
 .card3 {
-  background-color: white;
+  background-color: rgb(238, 238, 238);
 }
 
 #s1:checked ~ .cards #slide2,
@@ -56,7 +55,8 @@
 #s3:checked ~ .cards #slide1 {
   /* box-shadow: 0 15px 35px 0 rgba(0, 0, 0, 45%); */
   transform: translate3d(35%, 0, -120px);
-  height: 29.5rem;
+  /* height: 37.2rem; */
+  height: 100%;
 }
 
 #s1:checked ~ .cards #slide3,
@@ -64,7 +64,8 @@
 #s3:checked ~ .cards #slide2 {
   /* box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 45%); */
   transform: translate3d(-35%, 0, -120px);
-  height: 29.5rem;
+  /* height: 37.2rem; */
+  height: 100%;
 }
 
 #s1:checked ~ .cards #slide1,
@@ -72,5 +73,7 @@
 #s3:checked ~ .cards #slide3 {
   /* box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 50%); */
   transform: translate3d(0, 0, 0);
-  height: 30rem;
+  /* height: 37.7rem; */
+  /* height: clamp(37.7rem, 120vw, 42rem); */
+  height: 100%;
 }
