style: primary background color change

--- a/components/ui/sliders/ProjectsSlider.module.css
+++ b/components/ui/sliders/ProjectsSlider.module.css
@@ -41,7 +41,8 @@
 }
 
 .card1 {
-  background-color: #252525;
+  /* background-color: #252525; */
+  background-color: #151719;
 }
 .card2 {
   background-color: #ffe62d;
