style: change background color of project cards

--- a/components/ui/sliders/ProjectsSlider.module.css
+++ b/components/ui/sliders/ProjectsSlider.module.css
@@ -49,7 +49,7 @@
 }
 .card3 {
   /* background-color: #cbcbcb; */
-  background-color: #e8e9eb;
+  background-color: #edebe9;
 }
 
 #s1:checked ~ .cards #slide2,
