refactor: codebase cleanup

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,17 +4,7 @@
 
 @layer base {
   body {
-    /* @apply dark:bg-[#1d2229] dark:text-gray-100 overflow-x-hidden; */
-    /* @apply dark:bg-[#303138] dark:text-gray-100 overflow-x-hidden; */
-    @apply dark:bg-[#272b32] dark:text-gray-100 overflow-x-hidden;
-  }
-
-  .h2 {
-    @apply text-[#535353] font-[500] text-[clamp(2.5rem,6vw,5rem)];
-  }
-
-  .p {
-    @apply text-[#d1d1d1] font-[300] text-[clamp(.9rem,1.7vw,1.2rem)];
+    @apply bg-white dark:bg-dark w-full overflow-x-hidden;
   }
 
   strong {
@@ -24,11 +14,6 @@
   #monitorTheme {
     @apply fill-white dark:fill-[#4e6576];
   }
-}
-
-body {
-  width: 100%;
-  overflow-x: hidden;
 }
 
 #frame1 {
