--- a/app/components/ui/buttons/IndustrialTombBtn/ITombBtn.module.css
+++ b/app/components/ui/buttons/IndustrialTombBtn/ITombBtn.module.css
@@ -23,3 +23,11 @@
   top: 4px;
   left: 4px;
 }
+
+.pikachuBtn {
+  box-shadow: -4px 4px 0px 0px #a2c8de;
+}
+
+.pikachuBtn:active {
+  box-shadow: 0px 0px 0px 0px #a2c8de;
+}
