--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,3 +78,37 @@ a {
   background-clip: padding-box;
   border: 2px solid transparent;
 }
+
+.gradientText {
+  background-color: #ff6565;
+  background-image: linear-gradient(90deg, #b483a9, #c2877f);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+}
+
+.helloworld {
+  animation: hello 1s infinite ease-out;
+}
+@keyframes hello {
+  0% {
+    margin-top: 27px;
+  }
+  50% {
+    margin-top: 32px;
+  }
+  100% {
+    margin-top: 27px;
+  }
+}
+
+.test {
+  transform: translateX(16.7%);
+}
+
+.testt {
+  transform: translateX(-0.1%);
+}
