--- a/app/components/ui/buttons/menu-list-item/MenuListButton.module.css
+++ b/app/components/ui/buttons/menu-list-item/MenuListButton.module.css
@@ -4,7 +4,17 @@
   transition: color 0.1s ease;
 }
 
+.socials {
+  font-size: 1.1rem;
+  font-weight: 400;
+  transition: color 0.1s ease;
+}
+
 .btn:hover {
+  color: #ff754e;
+}
+
+.socials:hover {
   color: #ff754e;
 }
 
@@ -14,7 +24,7 @@
 
 .btnVisible {
   opacity: 1;
-  margin: 0.7rem 0;
+  margin: 0.4rem 0;
   transform: translateX(40px);
 }
 
@@ -36,4 +46,8 @@
 .btnVisible:nth-child(5) {
   transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
   transition-delay: 0.6s;
+}
+.btnVisible:nth-child(6) {
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transition-delay: 0.75s;
 }
